# top-down-game

./: .gitignore  CMakeLists.txt  Jogo.sln  Makefile  README.md  build.bat  config.mk  run.bat
Jogo/: Component.h  EntityComponentSystem.h  GameObject.cpp  GameObject.h  Jogo.cpp  Jogo.h  Jogo.hpp  Jogo.vcxproj  Jogo.vcxproj.filters  Main.cpp  Map.cpp  TextureManager.cpp  TextureManager.h  Vector2D.h  build.sh
Jogo/Debug/: vc141.idb
Jogo/Debug/Jogo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Jogo.lastbuildstate
Jogo/EntityComponentSystem/: EntityComponentSystem.h  PositionComponent.h  SpriteComponent.h
Jogo/x64/Debug/: vc141.idb
Jogo/x64/Debug/Jogo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Jogo.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
assets/maps/: default.map
src/: Collision.cpp  Collision.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Jogo.cpp  Main.cpp  Map.cpp  Map.h  TextureManager.cpp  TextureManager.h
src/EntityComponentSystem/: ColliderComponent.h  KeyboardController.h  SpriteComponent.h  TileComponent.h  TransformComponent.h
x64/Debug/: Jogo.ilk
